--- a/test/fixtures/blogs.yml
+++ b/test/fixtures/blogs.yml
@@ -2,6 +2,12 @@
 
 one:
   title: MyString
+  body: MyText
+  user: one
+  category: one
 
 two:
   title: MyString
+  body: MyText
+  user: two
+  category: two
